fixeses: drawer & social alignment

--- a/app/stylus/mutants-layout.styl
+++ b/app/stylus/mutants-layout.styl
@@ -451,7 +451,7 @@ html.forum, html.profile, html.search, html.moderation
           position absolute
           overflow hidden
           right (grid*1.5)
-          bottom -30px
+          bottom -32px
           height 25px
           min-width 200px
           max-width 300px
